# llm-recipe-gen

./: .gitignore  README.md  generate.py  pyproject.toml
latex/recipes/handmade/: ChickenWhiteShallot.tex  DijonRoastedVegetables.tex  PolishAppleCrumb.tex  PolishHunterStew.tex  TikkaPizza.tex  Tiramisu.tex  Zurek.tex
