[tool.poetry]
name = "recipe-gen"
version = "0.1.0"
description = "Generate LaTeX recipes and render PDFs using LLMs"
authors = ["Kamil Krukowski <Kamiljkrukowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.10"
python-dotenv = "1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
